# vmproeng

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CAPACITY_TESTS.md  CHANGELOG.md  COMO_RODAR.md  Makefile  QUICKSTART.md  README.md  README_FULL.md  ROADMAP.md  RUN_PROJECT.md  SETUP_PYTHON.md  STATUS.md  USAGE_GUIDE.md  docker-compose.yml  health-check.sh  monitor_memory.sh  pyproject.toml  requirements.txt  setup-python-env.sh  start.sh  stop.sh  test-project.sh  test_capacity.py  utils.sh
airflow/dags/: api_ingestion_dag.py  data_quality_dag.py  ecommerce_etl_pipeline.py  minio_datalake_dag.py
airflow/plugins/: .gitkeep
config/: airflow.cfg
monitoring/: dashboard.py
spark/jobs/: data_quality_check.py  sales_aggregation.py
sql/: analytics_queries.sql
sql/init/: 01_init_db.sql
